test/incremental/x86_64-macos/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-macos
//
// :109:9: error: struct 'tmp.tmp' has no member named 'main'
